pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-legacy-qualified-to.ub
factory: {
  state-moves: [
    { from: 'resource.old', to: 'core.thing@resource.new' }
  ]
}
